[gd_scene load_steps=10 format=3 uid="uid://cy5fmoflp5qlg"]

[ext_resource type="Script" uid="uid://dtcxx4j07wu3l" path="res://scripts/Player/player_conditions.gd" id="1_3i8vi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nonsv"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d410i"]
bg_color = Color(0.6, 0.114, 0.114, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xsq4g"]
bg_color = Color(0.141176, 0.141176, 0.141176, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cloe2"]
bg_color = Color(0.4, 1, 1, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_627wf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kb8os"]
bg_color = Color(0.203922, 0.780392, 0.34902, 1)
corner_radius_top_left = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bo68n"]
bg_color = Color(0.140447, 0.140447, 0.140447, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 3.0
expand_margin_top = 3.0
expand_margin_right = 3.0
expand_margin_bottom = 3.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bpsw7"]
bg_color = Color(0.780392, 0.0823529, 0.345098, 1)
corner_radius_top_left = 4
corner_radius_bottom_left = 4

[node name="Player_conditions" type="CanvasLayer"]
physics_interpolation_mode = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_3i8vi")
metadata/_edit_lock_ = true

[node name="ProgressBar_combo_meter" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 9.0
offset_top = 68.0
offset_right = 459.0
offset_bottom = 83.0
theme_override_styles/background = SubResource("StyleBoxFlat_nonsv")
theme_override_styles/fill = SubResource("StyleBoxFlat_d410i")
value = 60.0
show_percentage = false

[node name="ProgressBar_mana" type="ProgressBar" parent="Control"]
layout_mode = 0
offset_left = 9.0
offset_top = 45.0
offset_right = 459.0
offset_bottom = 60.0
theme_override_styles/background = SubResource("StyleBoxFlat_xsq4g")
theme_override_styles/fill = SubResource("StyleBoxFlat_cloe2")
value = 60.0
show_percentage = false

[node name="ProgressBar_health" type="ProgressBar" parent="Control"]
physics_interpolation_mode = 1
z_index = 1
texture_filter = 4
layout_mode = 0
offset_left = 9.0
offset_top = 9.0
offset_right = 459.0
offset_bottom = 36.0
theme_override_styles/background = SubResource("StyleBoxEmpty_627wf")
theme_override_styles/fill = SubResource("StyleBoxFlat_kb8os")
value = 60.0
show_percentage = false
metadata/_edit_lock_ = true

[node name="ProgressBar_damage" type="ProgressBar" parent="Control/ProgressBar_health"]
physics_interpolation_mode = 1
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_bo68n")
theme_override_styles/fill = SubResource("StyleBoxFlat_bpsw7")
value = 80.0
show_percentage = false
metadata/_edit_lock_ = true

[node name="Timer" type="Timer" parent="Control"]
wait_time = 0.5
one_shot = true
